# chatly-box

./: .dockerignore  .gitignore  README.md  docker-compose-local  docker-compose.yml  gradlew  gradlew.bat  run-local-backend.ps1  run-local-frontend.ps1  run-local-infra.sh  run-local.sh  run.sh  settings.gradle.kts
backend/: Dockerfile  build.gradle.kts  gradlew  gradlew.bat  pom.xml  settings.gradle.kts
backend/src/main/java/com/chatlybox/: ChatlyBoxApplication.java
backend/src/main/java/com/chatlybox/auth/: AuthController.java
backend/src/main/java/com/chatlybox/chat/: ChatController.java  (+4 more)
backend/src/main/proto/: rag.proto
backend/src/main/resources/: application.yml
backend/src/main/resources/db/changelog/: db.changelog-master.xml
backend/src/main/resources/db/migration/: V1__init.sql
docs/: api-examples.md
frontend/: .dockerignore  .env.example  Dockerfile  next.config.ts  package-lock.json  package.json  prisma.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/auth/login/: route.ts
frontend/app/api/chat/: route.ts
frontend/app/api/chats/: route.ts
frontend/app/api/me/: route.ts
frontend/app/api/settings/: route.ts
frontend/app/api/sources/: route.ts
frontend/app/api/sources/[id]/sync/: route.ts
frontend/app/login/: page.tsx
frontend/components/: console-shell.tsx  login-form.tsx
frontend/lib/: ai.ts  auth.ts  backend.ts  indexing.ts  prisma.ts  settings.ts
frontend/prisma/: schema.prisma  seed.ts
llamalib/: Cargo.toml  build-local.ps1
llamalib/.cargo/: config.toml
llamalib/src/: lib.rs
(+41 files in other folders)
