[package]
name = "chatly-llamalib"
version = "0.1.0"
edition = "2021"

[lib]
name = "chatly_llamalib"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
arrow-array = "58.3.0"
arrow-schema = "58.3.0"
ezllama = "0.3.1"
futures = "0.3"
lancedb = { version = "0.29.0", features = ["aws"] }
llama-cpp-2 = "0.1.146"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
